Fix move view scroll visible

--- a/src/Beastiepedia/Info/MoveList.module.css
+++ b/src/Beastiepedia/Info/MoveList.module.css
@@ -62,5 +62,5 @@
 
 .viewcontainer {
   max-width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
